[project]
name        = 'PyWavTool'
version     = '0.0.1'
authors     = [{ name = 'delta-kuro', email = 'sankaku.kuro@gmail.com' }]
description = ''
readme      = 'README.md'
license     = { file = 'LICENSE' }
classifiers = ['Programming Language :: Python :: 3']

[build-system]
requires      = ['setuptools >= 77.0.3']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['PyWavTool']

[tool.ruff.format]
quote-style = 'single'
